--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "files": [
+    "custom.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
