--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "custom.d.ts"],
   "files": [
-    "custom.d.ts"
+    "src/custom.d.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
