--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
   },
   "include": ["src", "custom.d.ts"],
   "files": [
-    "src/custom.d.ts"
+    "custom.d.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
